# rs-detect-language

./: Cargo.toml  README.md  example.sh  rs-detect-language.wasm  wasi.sh
src/: lib.rs  main.rs
