[package]
name = "rs-detect-language"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 1

[dependencies.lingua]
version = "1.7.2"

[dependencies.serde_json]
version = "1"
default-features = false
features = [
    "std",
]

[dependencies.serde]
version = "1"
default-features = false
features = [
    "std",
    "derive",
]

[dependencies.clap]
version = "4.5.4"
features = ["derive"]
